Fixed the text alignment

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
   display: grid;
   row-gap: var(--200);
   padding: 0 var(--200);
+  text-align: center;
 }
 
 .text :nth-child(1) {
